Pie de pagina izquierdo terminado

--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
 
         <aside></aside>
     </main>
-    <footer></footer>
+    <footer>
+        <h3>Contactanos</h3>
+        <p>
+            Direccion: Calle falsa 1234 Springfield
+            <br>
+            Email:homero@family.com
+            <br>
+            Telefono: 123 456 78 90
+        </p>
+    </footer>
+    
+    <footer>hola</footer>
 
     
 </body>
